# app/Http/Resources/OrganizationResource.php
@@ -1,0 +1,28 @@
+<?php
+
+namespace App\Http\Resources;
+
+use App\Models\Organization;
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+/**
+ * @mixin Organization
+ */
+
+class OrganizationResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        // return parent::toArray($request);
+        return [
+            'id' => $this->resource->id,
+            'name' => $this->resource->name,
+            'createdAt' => $this->resource->created_at,
+        ];
+    }
+}
